# oneMKL-samples

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  third-party-programs.txt
.github/: CODEOWNERS
american_options/: CMakeLists.txt  README.md  third-party-programs.txt
american_options/src/: CMakeLists.txt  longstaff_schwartz_svd_2.cu  longstaff_schwartz_svd_2.dp.cpp  utils.hpp
batched_linear_solver/: README.md  lu_solve_omp_offload.F90  lu_solve_omp_offload_optimized.F90  makefile
binomial/: GNUmakefile  README.md  makefile
black_scholes/: GNUmakefile  README.md  makefile
block_cholesky_decomposition/: GNUmakefile  README.md  makefile
block_lu_decomposition/: GNUmakefile  README.md  makefile
computed_tomography/: GNUmakefile  README.md  makefile
fourier_correlation/: GNUmakefile  README.md  makefile
matrix_mul_mkl/: GNUmakefile  README.md  makefile  matrix_mul_mkl.cpp
monte_carlo_european_opt/: GNUmakefile  README.md  makefile
monte_carlo_pi/: GNUmakefile  README.md  makefile
random_sampling_without_replacement/: GNUmakefile  README.md  makefile
sparse_conjugate_gradient/: GNUmakefile  README.md  makefile
student_t_test/: GNUmakefile  README.md  makefile
